--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -13,10 +13,12 @@
 .container .modal {
   z-index: 1;
   width: 350px;
-  height: 220px;
+  min-height: 220px;
   background: black;
+  padding: 15px 40px 15px 15px;
   border: 2px solid white;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   border-radius: 5px;
